@@ -1093,6 +1093,7 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 
 * (bug 5180) User login page shows inappropriate email blurb
 * Add the "AbortNewAccount" hook on account creation; see hooks.txt for more info.
+* Update default "exporttext" to reflect that Special:Import exists
 
 === Caveats ===
 
